--- a/source/Views/SuccessStoryView.xaml
+++ b/source/Views/SuccessStoryView.xaml
@@ -185,23 +185,17 @@
                                 </Border>
                             </Grid>
 
-                            <Grid Grid.Row="2">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="20" />
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="10" />
-                                    <ColumnDefinition Width="300" />
-                                    <ColumnDefinition Width="444*"/>
-                                    <ColumnDefinition Width="89*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <CheckBox Grid.Column="0" IsChecked="False" Name="PART_FilteredGames" Click="PART_FilteredGames_Click" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,2,19,2">
+                            <StackPanel Orientation="Horizontal" Grid.Row="2">
+                                <CheckBox IsChecked="false" Name="PART_NoUnlockedGames" Click="PART_NoUnlockedGames_Click">
+                                    <Label Content="{DynamicResource LOCSuccessStoryHideNoUnlockedGame}" FontSize="16" />
+                                </CheckBox>
+                                
+                                <CheckBox IsChecked="False" Name="PART_FilteredGames" Click="PART_FilteredGames_Click" Margin="30,0,0,0">
                                     <Label Content="{DynamicResource LOCCommonUsedFilteredGames}" FontSize="16" />
                                 </CheckBox>
 
-                                <Label Grid.Column="2" Content="{DynamicResource LOCCompletionStatuses}" FontSize="16" Grid.ColumnSpan="2" Margin="2,0,7,0" />
-                                <ComboBox Grid.Column="4" Name="FilterStatus" ItemsSource="{Binding FilterStatusItems}" IsEditable="True" IsReadOnly="True" Grid.ColumnSpan="2" Margin="4,0,439,0">
+                                <Label Content="{DynamicResource LOCCompletionStatuses}" FontSize="16" Margin="30,0,0,0" />
+                                <ComboBox Name="FilterStatus" ItemsSource="{Binding FilterStatusItems}" IsEditable="True" IsReadOnly="True" Margin="10,0,0,0">
                                     <ComboBox.ItemTemplate>
                                         <DataTemplate>
                                             <CheckBox Name="chkstatus" Checked="Chkstatus_Checked" Unchecked="Chkstatus_Unchecked" Tag="{Binding StatusName}"
@@ -210,7 +204,7 @@
                                         </DataTemplate>
                                     </ComboBox.ItemTemplate>
                                 </ComboBox>
-                            </Grid>
+                            </StackPanel>
                         </Grid>
                     </Border>
 
